peg-0.1.15 3/c99/c99.leg.c
/* A recursive-descent parser generated by peg 0.1.15 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 100


# include <stdio.h>
# include <stdlib.h>
# include <unistd.h>
# include <string.h>
# include <libgen.h>
# include <assert.h>
# include <time.h>
#include <sys/time.h> // gettimeofday

  typedef struct Header Header;

  struct Header {
    char   *text;
    Header *next;
  };

  FILE *input= 0;

  int   verboseFlag= 0;

  static int   lineNumber= 0;
  static char *fileName= 0;
  static char *trailer= 0;
  static Header *headers= 0;

  void makeHeader(char *text);
  void makeTrailer(char *text);

  void yyerror(char *message);

# define YY_INPUT(buf, result, max)   \
  {           \
    int c= getc(input);       \
    if ('\n' == c || '\r' == c) ++lineNumber; \
    result= (EOF == c) ? 0 : (*(buf)= c, 1);  \
  }

# define YY_LOCAL(T)  static T
# define YY_RULE(T) static T

#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_HEX_ESCAPE(yycontext *yy); /* 100 */
YY_RULE(int) yy_OCTAL_ESCAPE(yycontext *yy); /* 99 */
YY_RULE(int) yy_SIMPLE_ESCAPE(yycontext *yy); /* 98 */
YY_RULE(int) yy_ESCAPE(yycontext *yy); /* 97 */
YY_RULE(int) yy_CHAR_CONTENT(yycontext *yy); /* 96 */
YY_RULE(int) yy_LONG_SUFFIX(yycontext *yy); /* 95 */
YY_RULE(int) yy_INT_SUFFIX(yycontext *yy); /* 94 */
YY_RULE(int) yy_OCTAL(yycontext *yy); /* 93 */
YY_RULE(int) yy_HEXICAL(yycontext *yy); /* 92 */
YY_RULE(int) yy_DECIMAL(yycontext *yy); /* 91 */
YY_RULE(int) yy_BINARY_EXPONENT(yycontext *yy); /* 90 */
YY_RULE(int) yy_HEX_FRACTION(yycontext *yy); /* 89 */
YY_RULE(int) yy_HEX_PREFIX(yycontext *yy); /* 88 */
YY_RULE(int) yy_EXPONENT(yycontext *yy); /* 87 */
YY_RULE(int) yy_FRACTION(yycontext *yy); /* 86 */
YY_RULE(int) yy_FLOAT_SUFFIX(yycontext *yy); /* 85 */
YY_RULE(int) yy_HEX_FLOAT(yycontext *yy); /* 84 */
YY_RULE(int) yy_DECIMAL_FLOAT(yycontext *yy); /* 83 */
YY_RULE(int) yy_CChar(yycontext *yy); /* 82 */
YY_RULE(int) yy_CInteger(yycontext *yy); /* 81 */
YY_RULE(int) yy_CFloat(yycontext *yy); /* 80 */
YY_RULE(int) yy_CString(yycontext *yy); /* 79 */
YY_RULE(int) yy_Constant(yycontext *yy); /* 78 */
YY_RULE(int) yy_addArgumentExpressionList(yycontext *yy); /* 77 */
YY_RULE(int) yy_addDec(yycontext *yy); /* 76 */
YY_RULE(int) yy_addInc(yycontext *yy); /* 75 */
YY_RULE(int) yy_addField(yycontext *yy); /* 74 */
YY_RULE(int) yy_addIndex(yycontext *yy); /* 73 */
YY_RULE(int) yy_addPointerField(yycontext *yy); /* 72 */
YY_RULE(int) yy_addFunctionCall(yycontext *yy); /* 71 */
YY_RULE(int) yy_PrimaryExpression(yycontext *yy); /* 70 */
YY_RULE(int) yy_PostfixExpression(yycontext *yy); /* 69 */
YY_RULE(int) yy_CastExpression(yycontext *yy); /* 68 */
YY_RULE(int) yy_MultiplicativeExpression(yycontext *yy); /* 67 */
YY_RULE(int) yy_AdditiveExpression(yycontext *yy); /* 66 */
YY_RULE(int) yy_ShiftExpression(yycontext *yy); /* 65 */
YY_RULE(int) yy_RelationalExpression(yycontext *yy); /* 64 */
YY_RULE(int) yy_EqualityExpression(yycontext *yy); /* 63 */
YY_RULE(int) yy_ANDExpression(yycontext *yy); /* 62 */
YY_RULE(int) yy_ExclusiveORExpression(yycontext *yy); /* 61 */
YY_RULE(int) yy_InclusiveORExpression(yycontext *yy); /* 60 */
YY_RULE(int) yy_LogicalANDExpression(yycontext *yy); /* 59 */
YY_RULE(int) yy_LogicalORExpression(yycontext *yy); /* 58 */
YY_RULE(int) yy_ConditionalExpression(yycontext *yy); /* 57 */
YY_RULE(int) yy_addAssignmentOperator(yycontext *yy); /* 56 */
YY_RULE(int) yy_UnaryExpression(yycontext *yy); /* 55 */
YY_RULE(int) yy_Expression(yycontext *yy); /* 54 */
YY_RULE(int) yy_Statement(yycontext *yy); /* 53 */
YY_RULE(int) yy_Enumerator(yycontext *yy); /* 52 */
YY_RULE(int) yy_StructMemberName(yycontext *yy); /* 51 */
YY_RULE(int) yy_StructMemberDeclaration(yycontext *yy); /* 50 */
YY_RULE(int) yy_EnumeratorList(yycontext *yy); /* 49 */
YY_RULE(int) yy_addStructMember(yycontext *yy); /* 48 */
YY_RULE(int) yy_NAME_T(yycontext *yy); /* 47 */
YY_RULE(int) yy_SIGN(yycontext *yy); /* 46 */
YY_RULE(int) yy_addFuncType(yycontext *yy); /* 45 */
YY_RULE(int) yy_POINTER_QUALIFIER(yycontext *yy); /* 44 */
YY_RULE(int) yy_PrimaryType(yycontext *yy); /* 43 */
YY_RULE(int) yy_TypeSuffix(yycontext *yy); /* 42 */
YY_RULE(int) yy_Designator(yycontext *yy); /* 41 */
YY_RULE(int) yy_Designation(yycontext *yy); /* 40 */
YY_RULE(int) yy_addInitializerList(yycontext *yy); /* 39 */
YY_RULE(int) yy_AssignmentExpression(yycontext *yy); /* 38 */
YY_RULE(int) yy_ConstantExpression(yycontext *yy); /* 37 */
YY_RULE(int) yy_InitDeclAssign(yycontext *yy); /* 36 */
YY_RULE(int) yy_Initializer(yycontext *yy); /* 35 */
YY_RULE(int) yy_InitDecl(yycontext *yy); /* 34 */
YY_RULE(int) yy_VarName(yycontext *yy); /* 33 */
YY_RULE(int) yy_FunctionParam(yycontext *yy); /* 32 */
YY_RULE(int) yy_Annotation(yycontext *yy); /* 31 */
YY_RULE(int) yy_Block(yycontext *yy); /* 30 */
YY_RULE(int) yy_FunctionParamList(yycontext *yy); /* 29 */
YY_RULE(int) yy_Type(yycontext *yy); /* 28 */
YY_RULE(int) yy_AnnotationList(yycontext *yy); /* 27 */
YY_RULE(int) yy_VariableDeclaration(yycontext *yy); /* 26 */
YY_RULE(int) yy_StructDeclaration(yycontext *yy); /* 25 */
YY_RULE(int) yy_FunctionDeclaration(yycontext *yy); /* 24 */
YY_RULE(int) yy_Declaration(yycontext *yy); /* 23 */
YY_RULE(int) yy_TypeDef(yycontext *yy); /* 22 */
YY_RULE(int) yy_Directive(yycontext *yy); /* 21 */
YY_RULE(int) yy_KEYWORD(yycontext *yy); /* 20 */
YY_RULE(int) yy_Name(yycontext *yy); /* 19 */
YY_RULE(int) yy_HEX(yycontext *yy); /* 18 */
YY_RULE(int) yy_HEX4(yycontext *yy); /* 17 */
YY_RULE(int) yy_UCHAR(yycontext *yy); /* 16 */
YY_RULE(int) yy_DIGIT(yycontext *yy); /* 15 */
YY_RULE(int) yy_EOL(yycontext *yy); /* 14 */
YY_RULE(int) yy_STRING_CONTENT(yycontext *yy); /* 13 */
YY_RULE(int) yy_NAME(yycontext *yy); /* 12 */
YY_RULE(int) yy_ATTRIBUTECONTENT(yycontext *yy); /* 11 */
YY_RULE(int) yy_W(yycontext *yy); /* 10 */
YY_RULE(int) yy_ATTRIBUTE(yycontext *yy); /* 9 */
YY_RULE(int) yy_LINECOMMENT(yycontext *yy); /* 8 */
YY_RULE(int) yy_BLOCKCOMMENT(yycontext *yy); /* 7 */
YY_RULE(int) yy_S(yycontext *yy); /* 6 */
YY_RULE(int) yy_EOT(yycontext *yy); /* 5 */
YY_RULE(int) yy___(yycontext *yy); /* 4 */
YY_RULE(int) yy_TopLevel(yycontext *yy); /* 3 */
YY_RULE(int) yy__(yycontext *yy); /* 2 */
YY_RULE(int) yy_File(yycontext *yy); /* 1 */

